--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ numpy>=1.21.0
 Pillow>=9.0.0
 moviepy>=1.0.3
 requests>=2.28.0
+google-api-python-client>=2.86.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
